# ojs-to-oaktrust

./: .gitignore  README.md  ojsnake.json  pyproject.toml  request.py
config/: default_config.yml
fixtures/: paj-46.json
src/: __init__.py  ojsnake.py
tests/: test_articles.py
